SUBDIRS =src data po doc

ACLOCAL_AMFLAGS = -I m4


EXTRA_DIST =                    \
	Doxyfile		\
        ChangeLog               \
        intltool-extract.in     \
        intltool-merge.in       \
        intltool-update.in

DISTCLEANFILES =                \
        intltool-extract        \
        intltool-merge          \
        intltool-update

