
gmchess_sounddir= $(pkgdatadir)/sound
gmchess_sound_DATA= \
		    check.wav \
		    move.wav \
		    choose.wav \
		    eat.wav \
		    win.wav \
		    loss.wav \
		    0.wav \
		    1.wav \
		    2.wav \
		    3.wav \
		    4.wav \
		    5.wav \
		    6.wav \
		    7.wav \
		    8.wav \
		    9.wav \
		    10.wav


EXTRA_DIST= $(gmchess_sound_DATA)
