
gmchessimagedir= $(pkgdatadir)/themes/west
gmchessimage_DATA= \
		   bg.png 	\
		   select.png   \
		   null.png 	\
		   red_king.png \
		   red_king_die.png \
		   black_king.png \
		   black_king_die.png \
		   red_advisor.png \
		   black_advisor.png \
		   red_bishop.png \
		   black_bishop.png \
		   red_knight.png \
		   black_knight.png \
		   red_rook.png 	\
		   black_rook.png 	\
		   red_cannon.png \
		   black_cannon.png \
		   red_pawn.png \
		   black_pawn.png

EXTRA_DIST= $(gmchessimage_DATA)
